# online_texnika_shop

./: .env.example  .gitignore  Dockerfile  TODO  docker-compose.yaml  pyproject.toml
apps/: admin.py  apps.py  backends.py  forms.py  helper.py  mixins.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_product_description_and_more.py  0003_profile.py  0004_productattribute.py
apps/models/: __init__.py  cart.py  orders.py  payments.py  products.py  users.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
root/: settings.py  urls.py
templates/apps/: base.html
templates/apps/auth/: base.html  email_verification.html  login.html  otp.html  register.html
templates/apps/products/: cart.html  product-detail.html  product-list.html  product.html
